src/snapshots/prql__parser__parse_comment.snap
---
source: src/parser.rs
assertion_line: 129
expression: "parse_comment(r#\"# this is a comment\n        select a\"#)"

---
Ok(
    [
        Pair {
            rule: COMMENT,
            span: Span {
                str: "# this is a comment",
                start: 0,
                end: 19,
            },
            inner: [],
        },
    ],
)
