src/snapshots/prql__parser__parse_expr-2.snap
---
source: src/parser.rs
assertion_line: 206
expression: "parse(parse_to_pest_tree(\"aggregate by:[title] [sum salary]\",\n                         Rule::transformation).unwrap()).unwrap()"

---
- Transformation:
    name: Aggregate
    args:
      - List:
          - Items:
              - Ident: sum
              - Ident: salary
    named_args:
      - lvalue: by
        rvalue:
          - List:
              - Ident: title

