src/snapshots/prql__parser__parse_expr-3.snap
---
source: src/parser.rs
assertion_line: 210
expression: "parse(parse_to_pest_tree(r#\"[                                         \n  gross_salary: salary + payroll_tax,\n  gross_cost:   gross_salary + benefits_cost\n]\"#,\n                         Rule::list).unwrap()).unwrap()"

---
- List:
    - Assign:
        lvalue: gross_salary
        rvalue:
          - Ident: salary
          - Raw: +
          - Ident: payroll_tax
    - Assign:
        lvalue: gross_cost
        rvalue:
          - Ident: gross_salary
          - Raw: +
          - Ident: benefits_cost

