src/snapshots/prql__parser__parse_function-2.snap
---
source: src/parser.rs
assertion_line: 262
expression: "parse(parse_to_pest_tree(\"func plus_one x = x + 1\",\n                         Rule::function).unwrap()).unwrap()"

---
- Function:
    name: plus_one
    args:
      - x
    body:
      - Ident: x
      - Raw: +
      - Raw: "1"

