src/snapshots/prql__parser__parse_function-3.snap
---
source: src/parser.rs
assertion_line: 267
expression: "parse(parse_to_pest_tree(\"func return_constant = 42\",\n                         Rule::function).unwrap()).unwrap()"

---
- Function:
    name: return_constant
    args: []
    body:
      - Raw: "42"

