src/snapshots/prql__parser__parse_function.snap
---
source: src/parser.rs
assertion_line: 254
expression: "parse(parse_to_pest_tree(\"func identity x = x\", Rule::function).unwrap())"

---
Ok(
    [
        Function(
            Function {
                name: "identity",
                args: [
                    "x",
                ],
                body: [
                    Ident(
                        "x",
                    ),
                ],
            },
        ),
    ],
)
