src/snapshots/prql__parser__parse_list-2.snap
---
source: src/parser.rs
assertion_line: 114
expression: "parse_list(r#\"[                                         \n  gross_salary: salary + payroll_tax,\n  gross_cost:   gross_salary + benefits_cost\n]\"#)"

---
Ok(
    [
        Pair {
            rule: list,
            span: Span {
                str: "[                                         \n  gross_salary: salary + payroll_tax,\n  gross_cost:   gross_salary + benefits_cost\n]",
                start: 0,
                end: 127,
            },
            inner: [
                Pair {
                    rule: assign,
                    span: Span {
                        str: "gross_salary: salary + payroll_tax",
                        start: 45,
                        end: 79,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "gross_salary",
                                start: 45,
                                end: 57,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: terms,
                            span: Span {
                                str: "salary + payroll_tax",
                                start: 59,
                                end: 79,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "salary",
                                        start: 59,
                                        end: 65,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: operator,
                                    span: Span {
                                        str: "+",
                                        start: 66,
                                        end: 67,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "payroll_tax",
                                        start: 68,
                                        end: 79,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
                Pair {
                    rule: assign,
                    span: Span {
                        str: "gross_cost:   gross_salary + benefits_cost",
                        start: 83,
                        end: 125,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "gross_cost",
                                start: 83,
                                end: 93,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: terms,
                            span: Span {
                                str: "gross_salary + benefits_cost",
                                start: 97,
                                end: 125,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "gross_salary",
                                        start: 97,
                                        end: 109,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: operator,
                                    span: Span {
                                        str: "+",
                                        start: 110,
                                        end: 111,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "benefits_cost",
                                        start: 112,
                                        end: 125,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
)
