src/snapshots/prql__parser__parse_list.snap
---
source: src/parser.rs
assertion_line: 113
expression: "parse_list(r#\"[a, b, c,]\"#)"

---
Ok(
    [
        Pair {
            rule: list,
            span: Span {
                str: "[a, b, c,]",
                start: 0,
                end: 10,
            },
            inner: [
                Pair {
                    rule: terms,
                    span: Span {
                        str: "a",
                        start: 1,
                        end: 2,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "a",
                                start: 1,
                                end: 2,
                            },
                            inner: [],
                        },
                    ],
                },
                Pair {
                    rule: terms,
                    span: Span {
                        str: "b",
                        start: 4,
                        end: 5,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "b",
                                start: 4,
                                end: 5,
                            },
                            inner: [],
                        },
                    ],
                },
                Pair {
                    rule: terms,
                    span: Span {
                        str: "c",
                        start: 7,
                        end: 8,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "c",
                                start: 7,
                                end: 8,
                            },
                            inner: [],
                        },
                    ],
                },
            ],
        },
    ],
)
