src/snapshots/prql__parser__parse_query-2.snap
---
source: src/parser.rs
assertion_line: 70
expression: "parse_query(r#\"\n    from employees\n    filter country = \"USA\"\n    \"#)"

---
Ok(
    [
        Pair {
            rule: pipeline,
            span: Span {
                str: "from employees\n    filter country = \"USA\"",
                start: 5,
                end: 46,
            },
            inner: [
                Pair {
                    rule: transform,
                    span: Span {
                        str: "from employees",
                        start: 5,
                        end: 19,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "from",
                                start: 5,
                                end: 9,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: terms,
                            span: Span {
                                str: "employees",
                                start: 10,
                                end: 19,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "employees",
                                        start: 10,
                                        end: 19,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
                Pair {
                    rule: pipe,
                    span: Span {
                        str: "\n",
                        start: 19,
                        end: 20,
                    },
                    inner: [],
                },
                Pair {
                    rule: transform,
                    span: Span {
                        str: "filter country = \"USA\"",
                        start: 24,
                        end: 46,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "filter",
                                start: 24,
                                end: 30,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: terms,
                            span: Span {
                                str: "country = \"USA\"",
                                start: 31,
                                end: 46,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "country",
                                        start: 31,
                                        end: 38,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: operator,
                                    span: Span {
                                        str: "=",
                                        start: 39,
                                        end: 40,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: string,
                                    span: Span {
                                        str: "\"USA\"",
                                        start: 41,
                                        end: 46,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
        Pair {
            rule: EOI,
            span: Span {
                str: "",
                start: 51,
                end: 51,
            },
            inner: [],
        },
    ],
)
