src/snapshots/prql__parser__parse_string.snap
---
source: src/parser.rs
assertion_line: 52
expression: "parse_string(r#\"\"USA\"\"#)"

---
Ok(
    [
        Pair {
            rule: string,
            span: Span {
                str: "\"USA\"",
                start: 0,
                end: 5,
            },
            inner: [],
        },
    ],
)
